deps/crates/vendor/serde_json/tests/ui/unexpected_after_map_entry.rs
use serde_json::json;

fn main() {
    json!({ "k": true => });
}
